Introduce elementName attribute for openapi schema generation
